fixed the issue with mis align language bar

--- a/style/theme/white/style.css
+++ b/style/theme/white/style.css
@@ -168,7 +168,7 @@ body:not(.big-h3) .content h3 { font-size: 0.9em; }
 .content h1:first-child { padding-top: 0; }
 	.content h1:first-child,
 	.content h1:first-child a,
-	.content h1:first-child a:visited { color: #505050; }
+	.content h1:first-child a:visited { color: #505050; padding-top: 10px;}
 		.content h1:first-child:before { display: none; }
 
 @media (max-width: 768px) /* Tablet */ {
@@ -192,6 +192,10 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	body.no-literate .content pre > code::-webkit-scrollbar-thumb { background: #ddd; -webkit-border-radius: 8px; border-radius: 8px; border: solid 4px #15191D; }
 	body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb { background: #999; -webkit-box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); box-shadow: inset 2px 2px 3px rgba(0,0,0,0.2); }
 
+@media (max-width: 1060px) {
+	.right { display: none; }
+}
+
 @media (max-width: 1180px) /* Small desktop */ {
 	.content pre > code { background: #15191D; border: solid 1px #e7eaee; border-top: solid 1px #dbdde2; border-left: solid 1px #e2e5e9; display: block; padding: 10px; -webkit-border-radius: 2px; border-radius: 2px; overflow: auto; }
 	.content pre > code { -webkit-overflow-scrolling: touch; }
@@ -211,7 +215,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 
 @media (min-width: 1180px) /* Big desktop */ {
 	body:not(.no-literate) .content-root { background-color: #15191D; -webkit-box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); box-shadow: inset 780px 0 #fff, inset 781px 0 #dfe2e7, inset 790px 0 5px -10px rgba(0,0,0,0.1); }
-	.language { left: 780px; width: 120%; }
+	.language { left: 778px; }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
@@ -257,19 +261,19 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	body:not(.no-literate):not(.big-h3) .content > h3 { margin-left: 40px; width: 470px; margin-bottom: 3px; padding-left: 0; padding-right: 0; }
 }
 
-.header { background: #fff; text-shadow: 0 1px 0 rgba(255,255,255,0.5); box-shadow: 0 1px 5px #969696; padding: 4px 15px 2px 30px; zoom: 1; line-height: 20px; position: relative; }
+.header { background: #fff; text-shadow: 0 1px 0 rgba(255,255,255,0.5); box-shadow: 0 1px 5px #969696; padding: 4px 15px 2px 24px; zoom: 1; line-height: 20px; position: relative; }
 	.header:before,
 	.header:after { content: ""; display: table; }
 	.header:after { clear: both; }
 	.header .left { float: left; }
-	.header .right { text-align: right; position: absolute; right: 15px; top: 15px; }
+	.header .right { text-align: right; position: absolute; left: 265px; top: 23px; }
 		.header .right iframe { display: inline-block; vertical-align: middle; }
 	.header h1 { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-weight: bold; font-size: 13px; }
 		.header h1,
 		.header h1 a,
 		.header h1 a:visited { color: #9090aa; }
 			.header h1 a:hover { color: #505050; }
-	.header li a { font-size: 0.90em; color: gray; display: block; }
+	.header li a { font-size: 0.85em; font-weight: 700; color: #ccc; display: block; text-transform: uppercase; letter-spacing: 1px; }
 		.header li a:hover { color: gray; border-bottom: solid 1px #00b0f0; }
 	.header li.active a { color: gray; border-bottom: solid 1px #00b0f0; }
 
@@ -281,7 +285,7 @@ body.no-literate .content pre > code { -webkit-overflow-scrolling: touch; }
 	.header h1 + ul { border-left: solid 1px #dfe2e7; margin-left: 15px; }
 	/*.header li { border-left: solid 1px rgba(255,255,255,0.5); border-right: solid 1px #dfe2e7; }*/
 	.header li:last-child { border-right: 0; }
-	.header li a { padding: 0 5px; margin: 0 10px; }
+	.header li a { padding: 0 3px; margin: 0 20px; line-height: 16px; }
 }
 
 @media (max-width: 480px) /* Mobile */ {
